--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -72,4 +72,16 @@
     font-size: 10px;
     background: red;
 }
-
+.shopcategory-loadmore{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 150px auto;
+    width: 233px;
+    height: 69px;
+    border-radius: 75px;
+    background: #080808;
+    color: #e0dada;
+    font-size: 18px;
+    font-weight: 500;
+}
