--- a/src/Pages/CSS/Shopcategory.css
+++ b/src/Pages/CSS/Shopcategory.css
@@ -14,3 +14,12 @@
     border-radius: 40px;
     border: 1px solid ;
 }
+.shopcategory-indexSort p span{
+    font-weight: 600; 
+}
+.shopcategory-products{
+    margin: 30px 170px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    row: gap 80px;
+}
