--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -1,5 +1,10 @@
 .item{
-    width: 350px;
+    width: 280px;
+
+}
+.item img {
+    width: 280px;
+
 }
 .item p {
     margin: 6px 0px;
@@ -23,4 +28,37 @@
 transform: scale(1.15);
 transition: 0.5s;
 
+}
+@media(max-width:1280px){
+    .item{
+        width: 220px;
+        font-size: 14px;
+    }
+    .item img{
+        width: 220px;
+    }
+    .item-price-old{
+        font-size: 14px;
+    }
+}
+@media(max-width:800px){
+    .item{
+        width: 120px;
+        font-size: 13px;
+    }
+    .item img  {
+        width: 120px;
+    }
+    .item-price-old{
+        font-size: 13px;
+    }
+}
+@media(max-width:500px){
+    .item{
+        width: 160px;
+    }
+    .item img{
+        width: 160px;
+        
+    }
 }
